add move event handler to player

--- a/index.html
+++ b/index.html
@@ -45,42 +45,11 @@
                 </div>
             </div>
 
-            <input type="range" id="progress" value="20" min="0" max="100">
+            <input type="range" id="progress" value="0" min="0" max="100">
             <audio src="" id="audio"></audio>
         </div>
 
-        <div class="playlist">
-            <div class="song">
-                <div class="thumb" style="background-image: url('https://i.ytimg.com/vi/jTLhQf5KJSc/maxresdefault.jpg');"></div>
-                <div class="body">
-                    <h3 class="title">Music name </h3>
-                    <p class="author">Singer</p>
-                </div>
-                <div class="option">
-                    <i class="fa-solid fa-ellipsis"></i>
-                </div>
-            </div>
-            <div class="song">
-                <div class="thumb" style="background-image: url('https://i.ytimg.com/vi/jTLhQf5KJSc/maxresdefault.jpg');"></div>
-                <div class="body">
-                    <h3 class="title">Music name</h3>
-                    <p class="author">Singer</p>
-                </div>
-                <div class="option">
-                    <i class="fa-solid fa-ellipsis"></i>
-                </div>
-            </div>
-            <div class="song">
-                <div class="thumb" style="background-image: url('https://i.ytimg.com/vi/jTLhQf5KJSc/maxresdefault.jpg');"></div>
-                <div class="body">
-                    <h3 class="title">Music name  </h3>
-                    <p class="author">Singer</p>
-                </div>
-                <div class="option">
-                    <i class="fa-solid fa-ellipsis"></i>
-                </div>
-            </div>
-        </div>
+        <div class="playlist"></div>
     </div>
     <script src="./assets/js/main.js"></script>
 </body>
